frontend/tests/errors/ER-002/duplicate_binding/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Name resolution failures are reported as compile-time errors | Name resolution failure: duplicate binding


&^main() -> #i32 {
    x:#i32 = 5
    x:#i32 = 10
    x
}
